# File-Helper

./: CMakeLists.txt  filehelper.cpp  filehelper.h  filehelper.ui  folderusage.cpp  folderusage.h  main.cpp  recentlyusedstack.cpp  recentlyusedstack.h  settingkeys.h  settingsmanager.cpp  settingsmanager.h
